--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@money-map/core": ["core/src/index.ts"]
+      "@money-map/core": ["core/src/index.ts"],
+      "@money-map/data-access": ["data-access/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
